<resources>
    <string name="title_activity_main">SunFit</string>
    <string name="login_with_fitbit">Login with Fitbit</string>
    <string name="scopes_granted_format">Scopes Granted: %s</string>
    <string name="user_info">User</string>
    <string name="activity_info">Activity</string>
    <string name="weight">Weight</string>
    <string name="hello_format">Hello %s!</string>
    <string name="devices">Devices</string>
    <string name="welcome">Welcome!</string>
    <string name="fitbit_logo_description">Fitbit Logo</string>
    <string name="error_loading_devices_format">Error loading devices: %s</string>
    <string name="error_loading_activities_format">Error loading user activities: %s</string>
    <string name="error_loading_user_format">Error loading user: %s</string>
    <string name="scopes_missing_format">`%s` scope(s) required to function correctly.</string>
    <string name="login_title">Login</string>
    <string name="missing_scopes_error">Error logging in. Missing the following required scopes: </string>
    <string name="login_dismissed">Login dismissed or no scopes selected</string>
    <string name="no_data">No data</string>
    <string name="loading">Loading…</string>
    <string name="error_loading_data">Error loading data. Check your internet connection and try
        again later.

    </string>
    <string name ="hck_button" > GetValue </string>



    <string name="app_name">SunFit</string>
    <string name="last_refreshed_today_steps">Last Refreshed on: %1$s</string>
    <string name="last_refreshed_total_redeemed_steps">Last Refreshed on: %1$s</string>
    <string name="last_refreshed_totalAvailable_redeemed_steps">Last Refreshed on: %1$s</string>
    <string name="totalSteps_required_for_coconutWater">Requires 10,000 steps</string>
    <string name="totalSteps_required_for_coffee">Requires 20,000 steps</string>
    <string name="totalSteps_required_for_smoothie">Requires 50,000 steps</string>

</resources>
